--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,25 +7,25 @@
 /* You can override the default Infima variables here. */
 
 :root {
-  --ifm-color-primary: #1bb7e4;
-  --ifm-color-primary-dark: #0087b2;
-  --ifm-color-primary-darker: #005a82;
-  --ifm-color-primary-darkest: #003155;
-  --ifm-color-primary-light: #6ae9ff;
-  --ifm-color-primary-lighter: #a3ffff;
-  --ifm-color-primary-lightest: #d7ffff;
+  --ifm-color-primary: #18b4e0;
+  --ifm-color-primary-dark: #16a2ca;
+  --ifm-color-primary-darker: #1499be;
+  --ifm-color-primary-darkest: #117e9d;
+  --ifm-color-primary-light: #29bee8;
+  --ifm-color-primary-lighter: #34c1e9;
+  --ifm-color-primary-lightest: #56cced;
   --ifm-code-font-size: 95%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-html[data-theme="dark"] {
-  --ifm-color-primary: #1bb7e4;
-  --ifm-color-primary-dark: #0087b2;
-  --ifm-color-primary-darker: #005a82;
-  --ifm-color-primary-darkest: #003155;
-  --ifm-color-primary-light: #b9224e;
-  --ifm-color-primary-lighter: #f05a7a;
-  --ifm-color-primary-lightest: #ff8da9;
+[data-theme='dark'] {
+  --ifm-color-primary: #19b9e7;
+  --ifm-color-primary-dark: #16a7d1;
+  --ifm-color-primary-darker: #159ec5;
+  --ifm-color-primary-darkest: #1182a2;
+  --ifm-color-primary-light: #30c0e9;
+  --ifm-color-primary-lighter: #3cc4eb;
+  --ifm-color-primary-lightest: #5fceee;
 }
 
 .docusaurus-highlight-code-line {
@@ -35,7 +35,7 @@ html[data-theme="dark"] {
   padding: 0 var(--ifm-pre-padding);
 }
 
-html[data-theme="dark"] .docusaurus-highlight-code-line {
+[data-theme="dark"] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -58,4 +58,33 @@ html[data-theme="dark"] .docusaurus-highlight-code-line {
   width: 100%;
   height: 100%;
   border: none;
+}
+
+@font-face {
+  font-family: "Mona Sans";
+  src: url("/static/fonts/Mona-Sans.woff2") format("woff2 supports variations"),
+    url("/static/fonts/Mona-Sans.woff2") format("woff2-variations");
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("/static/fonts/InterVariable.woff2") format("woff2 supports variations"),
+    url("/static/fonts/InterVariable.woff2") format("woff2-variations");
+  font-weight: 400 900;
+  font-strength: 75% 125%;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Mona Sans", sans-serif;
 }
