--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -99,3 +99,9 @@ h6 {
 [data-theme='dark'] .vectorimagelight {
   display: none;
 }
+
+img.icon {
+  height: 1.5em;
+  vertical-align: middle;
+  margin-right: 0.25em;
+}
